This file documents the revision history for the Open Monitoring Distribution (Labs Edition)

next 5.x:
          - Thruk: update to 3.00
          - rrdtool: Update to 1.8.0

next:
          - Thruk: update to 2.50
          - Gearman:
            - Mod-Gearman module update 4.0.3
            - update mod-gearman-worker-go to 1.2.3
          - Grafana 7.5.17
          - LMD: Update 2.1.1
          - Monitoring-Plugins: update to 2.3.2

4.60     Aug 12 2022
          - Naemon:
            - update core to 1.3.1
            - update livestatus to 1.3.1
          - Grafana 7.5.13
          - Icinga2 update to 2.13.2
          - InfluxDB 1.8.10
          - Prometheus:
          - Prometheus 2.32.1
            - node_exporter 1.3.0
            - alertmanager 0.23.0
          - VictoriaMetrics 1.72.0
          - Thruk: update to 2.48.3
          - LMD: Update 2.1.0
          - Gearman:
            - Mod-Gearman module update 4.0.2
            - update mod-gearman-worker-go to 1.2.1
          - Go builds updated to 1.18.3
          - check_nrpe 4.1.0

4.40     Nov 08 2021
          - Naemon:
            - update core to 1.3.0
            - update livestatus to 1.3.0
            - add vimvault plugin
          - Thruk: update to 2.46
          - LMD: Update 2.0.3
          - VictoriaMetrics 1.66.2
          - Grafana 7.5.9
          - InfluxDB 1.8.5
          - Prometheus:
            - Prometheus 2.30.3
            - node_exporter 1.2.2
            - blackbox_exporter 0.19.0
            - pushgateway 1.4.1
            - alertmanager 0.22.2
          - Gearman:
            - Gearman-Proxy update 2.08

4.20     Jun 10 2021
          - Naemon:
            - update core to 1.2.4
            - update livestatus to 1.2.4.1
          - Thruk: update to 2.44.3
          - LMD: Update 2.0.1
          - Gearman:
            - update mod-gearman-worker-go to 1.1.5
          - Icinga2 update to 2.11.8
          - Monitoring-Plugins: update to 2.3.1
          - Grafana