@@ -82,7 +82,9 @@ my $tests = [
   { cmd => $omd_bin." rm $site3",        like => '/Restarting Apache...\s*OK/', stdin => "yes\n" },
   { cmd => $omd_bin." rm $site",         like => '/Restarting Apache...\s*OK/', stdin => "yes\n" },
   { cmd => $omd_bin." create -u 7017 -g 7018 $site",
-                                         like => '/Created new site '.$site.'./' },
+                                         like => '/Created new site '.$site.'./',
+                                         errlike => '/^(|.*outside of the .* range.*)$/',
+  },
   { cmd => "/bin/su - $site -c 'omd reset etc/htpasswd'", like => '/^$/' },
   { cmd => "/usr/bin/id -u $site",       like => '/7017/' },
   { cmd => "/usr/bin/id -g $site",       like => '/7018/' },
@@ -91,7 +93,9 @@ my $tests = [
                                          errlike => '/Apache port \d+ is in use\. I\'ve choosen \d+ instead\./' },
   { cmd => "/usr/bin/id -u $site2",      like => '/7019/' },
   { cmd => "/usr/bin/id -g $site2",      like => '/7020/' },
-  { cmd => $omd_bin." mv -u 7021 -g 7022 $site2 $site3", like => '/Moving site '.$site2.' to '.$site3.'.../' },
+  { cmd => $omd_bin." mv -u 7021 -g 7022 $site2 $site3", like => '/Moving site '.$site2.' to '.$site3.'.../',
+                                         errlike => '/^(|.*outside of the .* range.*)$/',
+  },
   { cmd => "/usr/bin/id -u $site3",      like => '/7021/' },
   { cmd => "/usr/bin/id -g $site3",      like => '/7022/' },
   { cmd => $omd_bin." rm $site",         like => '/Restarting Apache...\s*OK/', stdin => "yes\n" },
